--- a/newnav.css
+++ b/newnav.css
@@ -1,10 +1,10 @@
 :root {
     font-size: 16px;
     font-family: 'Open Sans';
-    --text-primary: #b6b6b6;
+    --text-primary: #070707;
     --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
+    --bg-primary: #ffffff;
+    --bg-secondary: #33ff00;
     --transition-speed: 600ms;
   }
   
@@ -178,24 +178,7 @@
     }
   }
 
-  
-  .light {
-    --text-primary: #1f1f1f;
-    --text-secondary: #000000;
-    --bg-primary: #ffffff;
-    --bg-secondary: #e4e4e4;
-  }
-  
-  .solar {
-    --text-primary: #000000;
-    --text-secondary: #ffffff;
-    --bg-primary: #ffffff;
-    --bg-secondary: #01fd16;
-  }
-  
-  .theme-icon {
-    display: none;
-  }
+
   
   
   .light #lightIcon {
