--- a/static/main.css
+++ b/static/main.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    background-color: black;
 }
 
 .container {
@@ -21,14 +22,6 @@ header {
     color: #ffffff;
 }
 
-#myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1;
-}
 
 nav {
     margin-top: 20px;
