--- a/static/main.css
+++ b/static/main.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: #000000;
 }
 
 .container {
