--- a/static/main.css
+++ b/static/main.css
@@ -13,7 +13,7 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
-     /* padding: 20px;  */
+    /* padding: 20px; */
 }
 
 /* Header Styles */
@@ -21,7 +21,6 @@ header {
     /* background-color: #000000; */
     color: #ffffff;
 }
-
 
 nav {
     margin-top: 20px;
@@ -47,6 +46,7 @@ nav {
 
 nav ul {
     list-style-type: none;
+    padding-left: 60px;
     display: flex;
     justify-content: flex-start; /* Align the items on the left */
 }
@@ -71,7 +71,7 @@ nav ul li a:before {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #65f565;
+    background-color: #00ffff;
     visibility: hidden;
     transform: scaleX(0);
     transition: all 0.3s ease-in-out;
@@ -128,57 +128,423 @@ nav ul li a:hover:before {
     margin-bottom: 40px;
 }
 
-.hero button {
-    padding: 10px 20px;
-    font-size: 19px;
-    background-color: #1ffd1f;
-    color: #000000;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: none;
-    border-radius: 14px;
-    cursor: pointer;
+/* Section Styles */
+section {
+    padding: 80px 0;
+    color: #ffffff;
+    text-align: center;
 }
 
-/* Login Form Styles */
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    z-index: 1;
+section h2 {
+    font-size: 50px;
+    margin-bottom: 20px;
 }
 
+section p {
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 600;
+}
+@media screen and (max-width: 600px) {
+  section h2{
+      font-size: 40px;
+  }}
+Testimonials Styles
+/* Testimonials Styles */
+.testimonials {
+    background-color: #000000;
+    
+}
+
+.testimonial {
+    display: flex;
+    flex-direction: row;
+    align-items: center; /* Align items on the left */
+    margin-bottom: 40px;
+    padding: 35px;
+    border-radius: 10px;
+    background-color: #fcfcfc;
+    border: 1px solid white ;
+    background: rgb(8,8,8);
+    background: radial-gradient(circle, rgba(8,8,8,1) 0%, rgba(0,0,0,1) 64%, rgb(3 20 34) 100%);;
+    animation: fade-in 1s ease-in-out;
+    color: #ffffff;
+   
+}
+
+.testimonial img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    animation: slide-in 1s ease-in-out;
+    background-color: #ffffff;
+}
+
+.testimonial blockquote {
+    font-size: 23px;
+    margin-bottom: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.testimonial cite {
+    margin-left: auto;
+    font-size: 20px;
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+/* Animations */
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        transform: translateX(-20px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+.container2 h2 {
+    font-size: 50px;
+}
+.container2 p {
+    font-size: 28px;
+}
 
 /* Media Queries for Mobile Devices */
 @media screen and (max-width: 600px) {
+    
+    .container2 h2 {
+        font-size: 38px;
+    }
+    .container2 p {
+        font-size: 19px;
+    }
     nav {
         font-size: 16px;
     }
     .container {
-         padding: 20px; 
+        padding: 20px;
+        
     }
     .logo img {
         height: 40px;
         width: 40px;
-        margin-left: 10px;
+        margin-left: 30px;
     }
 
     .hero h1 {
-        font-size: 36px;
+        font-size: 35.4px;
     }
-
+    .typewriter {
+        overflow: hidden; /* Ensures the content is not revealed until the animation */
+        /* border-right: .15em solid rgb(255, 255, 255); The typewriter cursor */
+        white-space: nowrap; /* Keeps the content on a single line */
+        font-size: 35px;
+        margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+        letter-spacing: .1em; /* Adjust as needed */
+        animation: typing 3.5s steps(30, end), blink-caret .5s step-end infinite;
+    }
     .hero p {
-        font-size: 18px;
+        font-size: 17px;
+        font-weight: 600;
     }
 
     .hero button {
         font-size: 16px;
+        font-weight: 800;
     }
-
-
-
-  
+    .testimonial {
+        display: flex;
+        flex-direction: column;
+    padding: 20px;
+    font-size: 20px;
 }
+.testimonial blockquote {
+    font-size: 20px;}
+    .testimonial cite {
+       
+        font-size: 20px;}
+}
+.call-to-action {
+    background-color: #000000;
+    padding: 50px 0;
+}
+
+.container {
+    text-align: center;
+}
+
+#signup-btn {
+    background-color: #35ff02;
+    color: #000000;
+    padding: 10px 20px;
+    font-size: 18px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+#signup-btn:hover {
+    background-color: #00ffea;
+}
+@media screen and (max-width: 600px) {
+  #signup-btn{
+    padding: 5px 10px;
+  }
+  nav ul{
+    padding-left: 22px;
+  }
+}
+/* Animation */
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+#signup-btn {
+    animation: pulse 1s infinite;
+}
+footer {
+    background-color: #000000;
+    padding: 20px 0;
+    color: #ffffff;
+    text-align: center;
+  }
+  
+  .container1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: -30px;
+  }
+  
+  .social-icons {
+    margin: 20px 0;
+  }
+  
+  .social-icons a {
+    display: inline-block;
+    margin-right: 10px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .social-icons a:last-child {
+    margin-right: 0;
+  }
+  
+  .social-icons a img {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .social-icons a:hover {
+    transform: scale(1.2);
+  }
+  
+  p {
+    font-size: 14px;
+  }
+  
+  /* Animation */
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  footer {
+    animation: fade-in 1s;
+  }
+  .how-it-works {
+    background-color: #000000;
+    padding: 50px 0;
+    
+  }
+  
+  .container3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    
+  }
+  
+  .step {
+    margin: 20px 20px;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #000000;
+    box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
+    animation: fade-in 1s;
+    background: rgb(8,8,8);
+background: radial-gradient(circle, rgba(8,8,8,1) 0%, rgba(0,0,0,1) 64%, rgb(20 0 32) 100%);
+border: 1px solid white;
+  }
+  
+  .step-image {
+    width: 100%;
+  max-width: 300px;
+  height: auto;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  padding: 20px;
+  }
+  
+  .step h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .step p {
+    font-size: 18px;
+    color: #d8d6d6;
+  }
+  
+  /* Media Queries */
+  @media (min-width: 768px) {
+    
+    .container3 {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+  
+    .step {
+      flex-basis: 30%;
+    }
+    
+    .step-image {
+      width: 80%;
+      max-width: 300px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+  }
+  
+  /* Animation */
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  .features {
+    background-color: #000000;
+    padding: 50px 0;
+  }
+  
+  .container4 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Add gap between cards */
+  }
+  
+  .feature-card {
+    flex: 1 1 20px; /* Adjust width based on available space */
+    margin: 30px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #000000;
+    background: rgb(8,8,8);
+background: radial-gradient(circle, rgba(8,8,8,1) 0%, rgba(0,0,0,1) 64%, rgb(7 36 28) 100%);
+    /* box-shadow: 0px 2px 10px rgba(255, 254, 254, 0.1); */
+    text-align: center;
+    animation: fade-in 1s ease-in-out;
+    font-size: 34px;
+    font-weight: 400;
+    border: 1px solid white;
+  }
+  
+  .feature-image {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    animation: slide-in 1s ease-in-out;
+  }
+  
+  .feature-card h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .feature-card p {
+    font-size: 16px;
+  }
+  
+  /* Animations */
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes slide-in {
+    0% {
+      transform: translateX(-20px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  /* Media Queries */
+  @media (max-width: 768px) {
+    
+    .container4 {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  
+    .feature-card {
+      flex: 1 1 auto;
+    }
+  }
+  .container2 h2:hover{
+    color: #5bfa3b;
+  }
+  .container1 h2:hover{
+    color: #bcff02;
+  }
+  .features h2:hover{
+    color: #3cfc76;
+  }
+  .how-it-works h2:hover{
+    color: #ce33fd;
+  }
+  .container h2:hover{
+    color: #48f4fa;
+  }
