--- a/static/newnav.css
+++ b/static/newnav.css
@@ -41,7 +41,7 @@
   
   .navbar-nav {
     list-style: none;
-    padding: 0;
+    padding: 8px;
     margin: 0;
     display: flex;
     flex-direction: column;
